objects/ACCESS_TOKEN_GENERATION__c.object
<CustomObject>
    <fields>
        <fullName>Client_Id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Client Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Secret__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Client Secret</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Endpoint_URL__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Endpoint URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserName__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>UserName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <customSettingsType>List</customSettingsType>
    <label>ACCESS_TOKEN_GENERATION</label>
</CustomObject>